--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
 		"data:upload": "bun run ./uploadData.ts"
 	},
 	"dependencies": {
+		"@patternfly/react-component-groups": "^6.3.0",
 		"@patternfly/react-core": "^6.3.0",
+		"@patternfly/react-icons": "^6.3.0",
 		"@patternfly/react-table": "^6.3.0",
 		"@tanstack/react-query": "^5.84.1",
 		"preact": "^10.13.1"
