--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
 		"@patternfly/react-component-groups": "^6.3.0",
 		"@patternfly/react-core": "^6.3.0",
 		"@patternfly/react-icons": "^6.3.0",
+		"@patternfly/react-styles": "^6.3.0",
 		"@patternfly/react-table": "^6.3.0",
+		"@preact/signals": "^2.2.1",
 		"@tanstack/react-query": "^5.84.1",
 		"preact": "^10.13.1"
 	},
