--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
+		"test": "vitest",
 		"build": "vite build",
 		"preview": "vite preview",
 		"openapi-ts": "openapi-ts",
@@ -23,17 +24,23 @@
 		"preact": "^10.13.1"
 	},
 	"devDependencies": {
-		"@happy-dom/global-registrator": "^18.0.1",
 		"@hey-api/openapi-ts": "^0.80.1",
 		"@preact/preset-vite": "^2.5.0",
 		"@testing-library/dom": "^10.4.1",
 		"@testing-library/jest-dom": "^6.6.4",
 		"@testing-library/preact": "^3.2.4",
+		"@testing-library/react": "^16.3.0",
 		"@types/bun": "^1.2.19",
 		"cli-progress": "^3.12.0",
 		"concurrently": "^9.2.0",
+		"happy-dom": "^18.0.1",
+		"playwright": "^1.54.2",
+		"react": "npm:@preact/compat",
+		"react-dom": "npm:@preact/compat",
 		"typescript": "^5.9.2",
-		"vite": "^4.3.2"
+		"vite": "^4.3.2",
+		"vitest": "^3.2.4",
+		"vitest-browser-preact": "^0.1.2"
 	},
 	"optionalDependencies": {
 		"@biomejs/biome": "^2.1.3"
