--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"scripts": {
 		"dev": "vite",
 		"test": "vitest",
+		"coverage": "vitest run --coverage",
 		"build": "vite build",
 		"preview": "vite preview",
 		"openapi-ts": "openapi-ts",
@@ -27,6 +28,7 @@
 		"@hey-api/openapi-ts": "^0.80.1",
 		"@preact/preset-vite": "^2.5.0",
 		"@types/bun": "^1.2.19",
+		"@vitest/coverage-v8": "^3.2.4",
 		"cli-progress": "^3.12.0",
 		"concurrently": "^9.2.0",
 		"happy-dom": "^18.0.1",
