--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
 		"predev": "podman-compose up -d",
 		"test": "vitest",
 		"coverage": "vitest run --coverage",
-		"build": "vite build",
-		"build:plugin": "if [ -z \"$BASE_PATH\" ]; then export BASE_PATH=/pui; fi; bun run build --base=$BASE_PATH && cd plugin && cargo build --release --locked",
+		"build": "vite build --base=/patient_list_ui",
+		"postbuild": "cd plugin && cargo build --release --locked",
 		"preview": "vite preview",
 		"postinstall": "if [ ! -f src/client/sdk.gen.ts ]; then bun run openapi-ts; fi",
 		"openapi-ts": "openapi-ts",
