--- a/plugin/Cargo.toml
+++ b/plugin/Cargo.toml
@@ -6,6 +6,7 @@ publish = false
 [dependencies]
 include_dir = "0.7.4"
 orthanc_sdk = { version = "0.2.0", features = ["webapp"] }
+serde = { version = "1.0.219", features = ["derive"] }
 
 [lib]
 crate-type = ["cdylib"]
