--- a/plugin/Cargo.toml
+++ b/plugin/Cargo.toml
@@ -4,8 +4,8 @@ edition = "2024"
 publish = false
 
 [dependencies]
-include_dir = "0.7.4"
-orthanc_sdk = { version = "0.2.0", features = ["webapp"] }
+include_webdir = "0.1.0"
+orthanc_sdk = { version = "0.4.0", features = ["webapp"] }
 serde = { version = "1.0.219", features = ["derive"] }
 
 [lib]
